--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login Page</title>
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
@@ -12,12 +12,12 @@
             <h2>Login</h2>
             <form action="#">
                 <div class="input-box">
-                    <input type="email">
-                    <label >Email</label>
+                    <input type="email" id="email-input" required>
+                    <label for="email-input">Email</label>
                 </div>
                 <div class="input-box">
-                    <input type="password">
-                    <label>Password</label>
+                    <input type="password" id="pass-input" required>
+                    <label for="pass-input">Password</label>
                 </div>
                 <div class="forgot-pass">
                     <a href="#">Forgot your Password?</a>
@@ -79,5 +79,6 @@
         <span style="--i:48;"></span>
         <span style="--i:49;"></span>
     </div>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
